# bevy_smud_demo

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yaml  pages.yaml
src/: consts.rs  main.rs  shader.rs  shape.rs  state.rs  templates.rs  util.rs
templates/fill/: cubic_falloff.wgsl  outline.wgsl  quilez.wgsl  simple.wgsl
templates/sdf/: blobby_cross.wgsl  circle.wgsl  donut.wgsl  heart.wgsl  moon.wgsl  pie.wgsl  stairs.wgsl  star.wgsl  triangle.wgsl  triangle_equilateral.wgsl  triangle_isosceles.wgsl
