[package]
name = "bevy_smud_demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = "0.17"
bevy_egui = "0.38"
bevy_smud = { git = "https://github.com/johanhelsing/bevy_smud.git", rev = "ffa25ec430a6f33b266da5351604e6f88125e68f" }
egui_extras = { version = "0.33.0", features = ["syntect"] }
include_dir = "0.7.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
