[package]
name = "bevy_smud_demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_post_process", "bevy_sprite_render", "bevy_state", "bevy_text", "wayland", "webgl2", "x11"] }
bevy_egui = "0.38"
bevy_smud = { git = "https://github.com/johanhelsing/bevy_smud.git", rev = "ffa25ec430a6f33b266da5351604e6f88125e68f" }
egui_extras = { version = "0.33.0", default-features = false, features = ["syntect"] }
git-version = "0.3.9"
include_dir = "0.7.4"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# Optimize for small binary size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
