[package]
name = "bevy_smud_demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = ["bevy_post_process", "bevy_sprite_render", "bevy_state", "bevy_text", "wayland", "webgl2", "x11"] }
bevy_egui = "0.38"
bevy_smud = { git = "https://github.com/johanhelsing/bevy_smud.git", rev = "ffa25ec430a6f33b266da5351604e6f88125e68f" }
egui_extras = { version = "0.33.0", default-features = false, features = ["syntect"] }
git-version = "0.3.9"
include_dir = "0.7.4"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[patch.crates-io]
bevy = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_a11y = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_android = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_anti_alias = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_app = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_asset = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_camera = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_color = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_core_pipeline = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_derive = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_diagnostic = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_ecs = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_encase_derive = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_gizmos = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_image = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_input = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_input_focus = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_internal = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_light = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_log = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_macro_utils = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_math = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_mesh = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_pbr = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_picking = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_platform = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_post_process = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_ptr = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_reflect = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_render = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_shader = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_sprite = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_sprite_render = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_state = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_tasks = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_text = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_time = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_transform = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_ui = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_ui_render = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_utils = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_window = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }
bevy_winit = { git = "https://github.com/jakoschiko/bevy.git", branch = "default-event-handling" }

# Optimize for small binary size
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
